--- a/docs/src/content/docs/osb/commands/activities.mdx
+++ b/docs/src/content/docs/osb/commands/activities.mdx
@@ -19,7 +19,7 @@ Miscellaneous activities you can do.
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
 | `action` | `string` | Yes | The method you wish to make planks. | Demon Butler, Sawmill |
-| `type` | `string` | Yes | The type of planks to make. | - |
+| `type` | `string` | Yes | The type of planks to make. | 4 options (see autocomplete) |
 | `quantity` | `integer` | No | The quantity of planks to make. | - |
 
 ## /activities chompy_hunt
@@ -32,7 +32,7 @@ Miscellaneous activities you can do.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `action` | `string` | Yes | Start a Chompy hunting trip, or claim hats. | - |
+| `action` | `string` | Yes | Start a Chompy hunting trip, or claim hats. | 2 options (see autocomplete) |
 
 ## /activities my_notes
 
@@ -54,7 +54,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `action` | `string` | Yes | Get tokens, or kill Cyclops. | - |
+| `action` | `string` | Yes | Get tokens, or kill Cyclops. | 2 options (see autocomplete) |
 | `quantity` | `integer` | No | The quantity (optional). | - |
 
 ## /activities camdozaal
@@ -67,7 +67,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `action` | `string` | Yes | Mining, smithing, or fishing inside the Ruins of Camdozaal | - |
+| `action` | `string` | Yes | Mining, smithing, or fishing inside the Ruins of Camdozaal | 3 options (see autocomplete) |
 | `quantity` | `integer` | No | The quantity to do (optional). | - |
 
 ## /activities collect
@@ -282,4 +282,4 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `activity` | `string` | Yes | The activity to do. | - |
+| `activity` | `string` | Yes | The activity to do. | 3 options (see autocomplete) |
