--- a/docs/src/content/docs/osb/commands/bank.mdx
+++ b/docs/src/content/docs/osb/commands/bank.mdx
@@ -19,9 +19,9 @@ See your minions bank.
 | `page` | `integer` | No | The page in your bank you want to see. | - |
 | `item` | `string` | No | The item you want to pick. | - |
 | `items` | `string` | No | Type a bank string to lookup | - |
-| `format` | `string` | No | The format to return your bank in. | - |
+| `format` | `string` | No | The format to return your bank in. | json, text_paged, text_full |
 | `search` | `string` | No | Text to search your bank with. | - |
 | `filter` | `string` | No | The filter you want to use. | - |
-| `sort` | `string` | No | The method to sort your bank by. | - |
-| `flag` | `string` | No | A particular flag to apply to your bank. | - |
-| `flag_extra` | `string` | No | An additional flag to apply to your bank. | - |
+| `sort` | `string` | No | The method to sort your bank by. | value, alch, name, quantity, market |
+| `flag` | `string` | No | A particular flag to apply to your bank. | show_price, show_market_price, show_alch, show_id, show_names, show_weights, show_all, wide |
+| `flag_extra` | `string` | No | An additional flag to apply to your bank. | show_price, show_market_price, show_alch, show_id, show_names, show_weights, show_all, wide |
