--- a/docs/src/content/docs/osb/commands/casket.mdx
+++ b/docs/src/content/docs/osb/commands/casket.mdx
@@ -16,5 +16,5 @@ Simulate opening lots of clue caskets.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `name` | `string` | Yes | The casket you want to open. | - |
+| `name` | `string` | Yes | The casket you want to open. | 6 options (see autocomplete) |
 | `quantity` | `integer` | Yes | The quantity you want to open. | - |
