--- a/docs/src/content/docs/osb/commands/cl.mdx
+++ b/docs/src/content/docs/osb/commands/cl.mdx
@@ -17,9 +17,9 @@ See your Collection Log.
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
 | `name` | `string` | Yes | The log you want to see. | - |
-| `type` | `string` | No | The type of log you want to see. | - |
-| `flag` | `string` | No | The flag you want to pass. | - |
-| `flag_extra` | `string` | No | An additional flag you want to pass. | - |
+| `type` | `string` | No | The type of log you want to see. | 4 options (see autocomplete) |
+| `flag` | `string` | No | The flag you want to pass. | 2 options (see autocomplete) |
+| `flag_extra` | `string` | No | An additional flag you want to pass. | 2 options (see autocomplete) |
 | `all` | `boolean` | No | Show all items? | - |
 
 **Examples**
