--- a/docs/src/content/docs/osb/commands/fake.mdx
+++ b/docs/src/content/docs/osb/commands/fake.mdx
@@ -16,5 +16,5 @@ Generate fake images of getting loot.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `type` | `string` | Yes | The type you want to generate. | - |
+| `type` | `string` | Yes | The type you want to generate. | 6 options (see autocomplete) |
 | `username` | `string` | Yes | The username to put on the image. | - |
