--- a/docs/src/content/docs/osb/commands/farming.mdx
+++ b/docs/src/content/docs/osb/commands/farming.mdx
@@ -64,7 +64,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `compost` | `string` | Yes | The compost you want to use by default. | - |
+| `compost` | `string` | Yes | The compost you want to use by default. | 3 options (see autocomplete) |
 
 ## /farming always_pay
 
@@ -123,4 +123,4 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `input` | `string` | No | The input you want to give. | - |
+| `input` | `string` | No | The input you want to give. | easy, medium, hard, easier |
