--- a/docs/src/content/docs/osb/commands/gamble.mdx
+++ b/docs/src/content/docs/osb/commands/gamble.mdx
@@ -18,7 +18,7 @@ Partake in various gambling activities.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `item` | `string` | No | The item you wish to gamble. | - |
+| `item` | `string` | No | The item you wish to gamble. | fire, infernal, quiver |
 | `autoconfirm` | `boolean` | No | Don't ask for confirmation | - |
 
 ## /gamble dice
@@ -80,7 +80,7 @@ Partake in various gambling activities.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `choice` | `string` | No | The flower type you want to guess. | - |
+| `choice` | `string` | No | The flower type you want to guess. | hot, cold |
 | `amount` | `string` | No | Amount you wish to gamble. | - |
 
 ## /gamble give_random_item
