--- a/docs/src/content/docs/osb/commands/gearpresets.mdx
+++ b/docs/src/content/docs/osb/commands/gearpresets.mdx
@@ -58,7 +58,7 @@ Manage, equip, unequip your gear presets.
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
 | `gear_preset` | `string` | Yes | The gear preset you want to select. | - |
-| `pinned_setup` | `string` | No | Pick a setup to pin this setup too. | - |
+| `pinned_setup` | `string` | No | Pick a setup to pin this setup too. | reset |
 
 ## /gearpresets delete
 
