--- a/docs/src/content/docs/osb/commands/k.mdx
+++ b/docs/src/content/docs/osb/commands/k.mdx
@@ -18,7 +18,7 @@ Send your minion to kill things.
 | --- | --- | --- | --- | --- |
 | `name` | `string` | Yes | The thing you want to kill. | - |
 | `quantity` | `integer` | No | The amount you want to kill. | - |
-| `method` | `string` | No | If you want to cannon/barrage/burst. | - |
+| `method` | `string` | No | If you want to cannon/barrage/burst. | barrage, cannon, burst, chinning, none |
 | `show_info` | `boolean` | No | Show information on this monster. | - |
 | `wilderness` | `boolean` | No | If you want to kill the monster in the wilderness. | - |
 | `solo` | `boolean` | No | Solo (if it's a group boss) | - |
