--- a/docs/src/content/docs/osb/commands/kill.mdx
+++ b/docs/src/content/docs/osb/commands/kill.mdx
@@ -19,4 +19,4 @@ Simulate killing monsters.
 | `name` | `string` | Yes | The monster you want to simulate killing. | - |
 | `quantity` | `integer` | Yes | The quantity you want to simulate. | - |
 | `catacombs` | `boolean` | No | Killing in catacombs? | - |
-| `master` | `string` | No | On slayer task from a master? | - |
+| `master` | `string` | No | On slayer task from a master? | Duradel, Vannaka, Konar quo Maten, Nieve, Chaeldar, Mazchna, Turael, Krystilia |
