--- a/docs/src/content/docs/osb/commands/lb.mdx
+++ b/docs/src/content/docs/osb/commands/lb.mdx
@@ -154,7 +154,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `clue` | `string` | Yes | The clue you want to select. | - |
+| `clue` | `string` | Yes | The clue you want to select. | 6 options (see autocomplete) |
 | `ironmen_only` | `boolean` | No | Only include ironmen. | - |
 
 ## /lb movers
