--- a/docs/src/content/docs/osb/commands/minigames.mdx
+++ b/docs/src/content/docs/osb/commands/minigames.mdx
@@ -51,7 +51,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `tier` | `string` | Yes | What tier of gamble to do. | - |
+| `tier` | `string` | Yes | What tier of gamble to do. | 3 options (see autocomplete) |
 | `quantity` | `integer` | Yes | The amount of gambles to do. | - |
 
 ## /minigames barb_assault stats
@@ -159,7 +159,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `skill` | `string` | Yes | The skill to put XP in. | - |
+| `skill` | `string` | Yes | The skill to put XP in. | attack, strength, defence, hitpoints, ranged, magic, prayer |
 | `amount` | `integer` | Yes | The amount of points you want to spend. | - |
 
 ## /minigames pest_control buy
@@ -464,7 +464,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `item` | `string` | Yes | The item to buy. | - |
+| `item` | `string` | Yes | The item to buy. | 5 options (see autocomplete) |
 | `quantity` | `integer` | No | Quantity. | - |
 
 ## /minigames agility_arena xp
@@ -477,7 +477,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `quantity` | `integer` | Yes | Quantity. | - |
+| `quantity` | `integer` | Yes | Quantity. | 1, 10, 25, 100, 1000 |
 
 ## /minigames trouble_brewing start
 
@@ -547,7 +547,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `strategy` | `string` | Yes | The strategy to use. | - |
+| `strategy` | `string` | Yes | The strategy to use. | experience, points |
 
 ## /minigames nmz buy
 
@@ -594,5 +594,5 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `shade` | `string` | Yes | The shade you want to use. | - |
-| `logs` | `string` | Yes | The logs you want to use. | - |
+| `shade` | `string` | Yes | The shade you want to use. | 6 options (see autocomplete) |
+| `logs` | `string` | Yes | The logs you want to use. | 10 options (see autocomplete) |
