--- a/docs/src/content/docs/osb/commands/minion.mdx
+++ b/docs/src/content/docs/osb/commands/minion.mdx
@@ -172,7 +172,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `item` | `string` | No | The item you want to charge | - |
+| `item` | `string` | No | The item you want to charge | 11 options (see autocomplete) |
 | `amount` | `integer` | No | The amount you want to charge | - |
 
 ## /minion daily
@@ -219,7 +219,7 @@ _No parameters._
 | --- | --- | --- | --- | --- |
 | `remove_darts` | `boolean` | No | Remove all darts from your blowpipe | - |
 | `uncharge` | `boolean` | No | Remove all darts and scales from your blowpipe | - |
-| `add` | `string` | No | Add darts or scales to your blowpipe | - |
+| `add` | `string` | No | Add darts or scales to your blowpipe | 10 options (see autocomplete) |
 | `quantity` | `integer` | No | The quantity of darts/scales to add | - |
 
 ## /minion info
