--- a/docs/src/content/docs/osb/commands/poh.mdx
+++ b/docs/src/content/docs/osb/commands/poh.mdx
@@ -30,7 +30,7 @@ Allows you to access and build in your POH.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `name` | `string` | Yes | The wallkit you want to pick. | - |
+| `name` | `string` | Yes | The wallkit you want to pick. | 2 options (see autocomplete) |
 
 ## /poh build
 
