--- a/docs/src/content/docs/osb/commands/raid.mdx
+++ b/docs/src/content/docs/osb/commands/raid.mdx
@@ -18,7 +18,7 @@ Send your minion to do raids - CoX or ToB.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `type` | `string` | Yes | Choose whether you want to solo, mass, or fake mass. | - |
+| `type` | `string` | Yes | Choose whether you want to solo, mass, or fake mass. | solo, mass, fakemass |
 | `challenge_mode` | `boolean` | No | Choose whether you want to do Challenge Mode. | - |
 | `max_team_size` | `integer` | No | Choose a max size for your team. | - |
 | `quantity` | `integer` | No | The quantity to do. | - |
@@ -90,7 +90,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `raid_level` | `integer` | Yes | Choose the raid level you want to do (1-600). | - |
+| `raid_level` | `integer` | Yes | Choose the raid level you want to do (1-600). | 10 options (see autocomplete) |
 | `solo` | `boolean` | No | Do you want to solo? | - |
 | `max_team_size` | `integer` | No | Choose a max size for your team. | - |
 | `quantity` | `integer` | No | The quantity to do. | - |
