--- a/docs/src/content/docs/osb/commands/tools.mdx
+++ b/docs/src/content/docs/osb/commands/tools.mdx
@@ -18,7 +18,7 @@ Various tools and miscellaneous commands.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `time` | `string` | Yes | The time period. | - |
+| `time` | `string` | Yes | The time period. | day, week, month |
 | `tier` | `string` | No | The tier of clue scroll. | - |
 | `ironman` | `boolean` | No | Only check ironmen accounts. | - |
 
@@ -32,7 +32,7 @@ Various tools and miscellaneous commands.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `time` | `string` | Yes | The time period. | - |
+| `time` | `string` | Yes | The time period. | day, week, month |
 | `monster` | `string` | Yes | The monster you want to pick. | - |
 | `ironman` | `boolean` | No | Only check ironmen accounts. | - |
 
@@ -46,7 +46,7 @@ Various tools and miscellaneous commands.
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `time` | `string` | Yes | The time period. | - |
+| `time` | `string` | Yes | The time period. | day, week, month |
 | `skill` | `string` | No | The skill you want to select. | - |
 | `ironman` | `boolean` | No | Only check ironmen accounts. | - |
 
@@ -75,7 +75,7 @@ Various tools and miscellaneous commands.
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
 | `item` | `string` | Yes | The item you want to pick. | - |
-| `filter` | `string` | No | Filter by account type. | - |
+| `filter` | `string` | No | Filter by account type. | Both, Irons Only, Mains Only |
 
 ## /tools patron sacrificed_bank
 
@@ -97,7 +97,7 @@ _No parameters._
 
 | Name | Type | Required | Description | Choices |
 | --- | --- | --- | --- | --- |
-| `format` | `string` | No | Bank Image or Json format? | - |
+| `format` | `string` | No | Bank Image or Json format? | bank, json |
 
 ## /tools patron minion_stats
 
